Big upgrade to MapBench v0.5 (updated scripts, benchmark & demo features, new output format for results)